[package]
name = "downloadyt"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.4", features = ["derive"] }
rayon = "1.10.0"
rustube = { version = "0.6.0", features = ["blocking"] }
thiserror = "1.0.59"
tokio = { version = "1.37.0", features = ["rt", "rt-multi-thread", "macros"] }
futures = "0.3.30"
features = "0.10.0"
indicatif = "0.17.8"
